added all the sound clips

--- a/expressive-web/index.html
+++ b/expressive-web/index.html
@@ -69,11 +69,11 @@
                             alt="" />
                     </a>
                 </p>
-                <iframe width="560" height="315"
+                <iframe width="180" height="100"
                     src="https://www.youtube.com/embed/0A7T5k84FeU?si=HtxBHlccCztLrFq6&amp;clip=Ugkx-jXQWLZQyTFE0O1nwGvUxCm9xy0qytPg&amp;clipt=ELSBBRiksAU"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen></iframe>
+                    ></iframe>
                 <p class="mt-5 fw-bolder">
                     Parsons Blvd
                 </p>
@@ -88,6 +88,11 @@
                             class="w-25 h-25 me-4" alt="" />
                     </a>
                 </p>
+                <iframe width="180" height="100"
+                    src="https://www.youtube.com/embed/0A7T5k84FeU?si=hC5SS9eR7igSheM0&amp;clip=UgkxkeYV7F1XmJeBT_kgoL7nmMWDnm_MQn1r&amp;clipt=EITDBRjc-QU"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    ></iframe>
                 <p class="mt-5 fw-bolder">
                     Suthphin Blvd
                 </p>
@@ -107,6 +112,11 @@
                             class="w-25 h-25 me-4" alt="" />
                     </a>
                 </p>
+                <iframe width="180" height="100"
+                    src="https://www.youtube.com/embed/0A7T5k84FeU?si=232Hz0eN-tAO0iDt&amp;clip=UgkxhSouDOTgoXDlesIOGoQ30ag0ZCt8DhRZ&amp;clipt=ELzXBhiUjgc"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    ></iframe>
                 <p class="mt-5 fw-bolder">
                     Briarwood-Van Wyck Blvd
                 </p>
@@ -126,6 +136,11 @@
                             class="w-25 h-25 me-4" alt="" />
                     </a>
                 </p>
+                <iframe width="180" height="100"
+                    src="https://www.youtube.com/embed/0A7T5k84FeU?si=jIXhD6u1Mo4UTzFT&amp;clip=Ugkxy4O46qofuVeudMtDsxmtGGMpipPPpiv6&amp;clipt=ENiFCBiYxAg"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    ></iframe>
                 <p class="mt-5 fw-bolder">
                     Kew Gardens-Union Tpke
                 </p>
@@ -145,6 +160,11 @@
                             class="w-25 h-25 me-4" alt="" />
                     </a>
                 </p>
+                <iframe width="180" height="100"
+                    src="https://www.youtube.com/embed/0A7T5k84FeU?si=nP7qGk5mIm8GaRzT&amp;clip=UgkxQdV3j_cfUhA6b6V0tdB0O_MRosc2YZvB&amp;clipt=EOSwCRjU3wk"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    ></iframe>
                 <p class="mt-5 fw-bolder">
                     75th Avenue
                 </p>
@@ -158,6 +178,11 @@
                         <img src="https://live.staticflickr.com/3362/3454771416_a53a9d7bda_b.jpg" class="w-25 h-25 me-4" alt="" />
                     </a>
                 </p>
+                <iframe width="180" height="100"
+                    src="https://www.youtube.com/embed/0A7T5k84FeU?si=AVZymMg59LZhMSfD&amp;clip=UgkxYOWvF5e4WFISdZ_4nPUI_vt3Qdyr7Qro&amp;clipt=EIz3CRjkrQo"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    ></iframe>
                 <p class="mt-5 fw-bolder">
                     71st Ave-Forest Hills
                 </p>
@@ -191,6 +216,11 @@
                             class="w-25 h-25 me-4" alt="">
                     </a>
                 </p>
+                <iframe width="180" height="100"
+                    src="https://www.youtube.com/embed/0A7T5k84FeU?si=xBQj-wgpGADrFNLV&amp;clip=UgkxGZIS7LkT2MNFhN6iu5RAvjN-MAAP9TFP&amp;clipt=ELCaCxjY4As"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    ></iframe>
                 <p class="mt-5 fw-bolder">
                     Jackson Heights-Roosevelt Ave
                 </p>
@@ -215,6 +245,11 @@
                             class="w-25 h-25 me-4" alt="">
                     </a>
                 </p>
+                <iframe width="180" height="100"
+                    src="https://www.youtube.com/embed/0A7T5k84FeU?si=Ua-tsNqCULO_sZG7&amp;clip=UgkxkQ8z9HnSboDuo_3HlJOL-4OBZfyfMn1Q&amp;clipt=EIygDRjk1g0"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    ></iframe>
                 <p class="mt-5 fw-bolder">
                     21st Street-Queensbridge
                 </p>
@@ -243,6 +278,11 @@
                         <img src="https://media.timeout.com/images/105673461/image.jpg" class="w-25 h-25 me-4" alt="">
                     </a>
                 </p>
+                <iframe width="180" height="100"
+                    src="https://www.youtube.com/embed/0A7T5k84FeU?si=ZFH1_IrNnl2f-Dfm&amp;clip=Ugkx7zvUrD5y01SZRS68hSb9KJABjGk6q_qI&amp;clipt=ENz6DRjMqQ4"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    ></iframe>
                 <p class="mt-5 fw-bolder">
                     Roosevelt Island
                 </p>
@@ -267,6 +307,11 @@
                             class="w-25 h-25 me-4" alt="">
                     </a>
                 </p>
+                <iframe width="180" height="100"
+                    src="https://www.youtube.com/embed/0A7T5k84FeU?si=2X1nqYceT2B-HkGu&amp;clip=UgkxdxdEjb_s9gUw1hYpqGfx0zcA9rjEL5Qk&amp;clipt=ENi-DhiY_Q4"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    ></iframe>
                 <p class="mt-5 fw-bolder">
                     Lexington Ave-63rd Street
                 </p>
@@ -291,6 +336,11 @@
                             class="w-25 h-25 me-4" alt="">
                     </a>
                 </p>
+                <iframe width="180" height="100"
+                    src="https://www.youtube.com/embed/0A7T5k84FeU?si=ZqT9ZRh06QRuzjXf&amp;clip=UgkxYIkGl0iAVsCMcfZdd5RQstc_fYsC-_fI&amp;clipt=EMCnEBiY3hA"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    ></iframe>
                 <p class="mt-5 fw-bolder">
                     57th Street
                 </p>
@@ -320,6 +370,11 @@
                             alt="">
                     </a>
                 </p>
+                <iframe width="180" height="100"
+                    src="https://www.youtube.com/embed/0A7T5k84FeU?si=lj2Lv7YPMGkYmwFW&amp;clip=UgkxugZCPqvmfkl2XgHB9CWqpOjm8axhQtyW&amp;clipt=EJTwEBjUrhE"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    ></iframe>
                 <p class="mt-5 fw-bolder">
                     47-50th Street-Rockefeller Center
                 </p>
@@ -344,6 +399,11 @@
                             class="w-25 h-25 me-4" alt="">
                     </a>
                 </p>
+                <iframe width="180" height="100"
+                    src="https://www.youtube.com/embed/0A7T5k84FeU?si=zkkAkVsTh4cptY0w&amp;clip=UgkxlZnzU2997zBaAY0UgRDv5RqdVZ00-1S5&amp;clipt=ENSSEhiU0RI"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    ></iframe>
                 <p class="mt-5 fw-bolder">
                     42nd Street-Bryant Park
                 </p>
@@ -368,6 +428,11 @@
                             class="w-25 h-25 me-4" alt="">
                     </a>
                 </p>
+                <iframe width="180" height="100"
+                    src="https://www.youtube.com/embed/0A7T5k84FeU?si=Z30esi36sykivwfY&amp;clip=Ugkx9dcF9BhH0cZjHEPyZg34cGJ3vUXPnXBF&amp;clipt=EICrExjY4RM"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    ></iframe>
                 <p class="mt-5 fw-bolder">
                     34th Street-Herald Square
                 </p>
