added a pic example to JS scrollama

--- a/expressive-web/index.html
+++ b/expressive-web/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <a href="home.html" class="home-link">Home</a>
-    <div class="image-container route">
+    <div class="image-container">
         <img src="images/F-train.jpg" class="train-pic" alt="">
-        <img src="images/mtaftrain-edit-removebg-preview.png" class="train-path" alt="f-train path">
+        <img src="images/mtaftrain-edit-removebg-preview.png" class="route" alt="f-train path">
     </div>
     <div class="overlay-text scroll-step stations">
         <section class="scrolly" data-size="50">
