--- a/scrollytelling/JS scrollama/index-orig.html
+++ b/scrollytelling/JS scrollama/index-orig.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Scrollama Example</title>
-    <link rel="stylesheet" type="text/css" href="./styles/style.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="./styles/style-orig.css" media="screen" />
 </head>
     
 <body>
@@ -15,13 +15,11 @@
         <section class="text-holder">
             <p class="scroll-step" >This is a ball</p>
             <p class="scroll-step" data-size="50">It's going to get bigger</p>
-            <p class="scroll-step" data-size="170">And bigger</p>    
-            <p class="scroll-step"data-size="250">And BIGGER!!!</p>    
+            <p class="scroll-step" data-size="70">And bigger</p>    
+            <p class="scroll-step"data-size="150">And BIGGER!!!</p>    
         </section>
         <section class="graphic">
-            <div>
-                <img src="https://i.ytimg.com/vi/R1KF2f1XsKw/maxresdefault.jpg" class="ball" alt="">
-            </div>
+            <div class="ball"></div>
         </section>
     </div>
     <div class="end">
