finished adding sounds

--- a/expressive-web/index.html
+++ b/expressive-web/index.html
@@ -15,7 +15,8 @@
     </div>
     <div class="overlay-text scroll-step stations">
         <section class="scrolly" data-size="50">
-                <p class="mt-5 fw-bolder">
+            <embed src="audio/sounds3.mp3" type="audio/mp3" width="130px" height="100px" />
+            <p class="mt-5 fw-bolder">
                     179th Street
                 </p>
                 <ul class="sights">
