added gif and styling the elements

--- a/expressive-web/index-edit.html
+++ b/expressive-web/index-edit.html
@@ -10,55 +10,51 @@
 </head>
 <body>
     <a href="home.html" class="home-link">Home</a>
+    <!--Create the starting statement-->
     <p class="intro">
         Stand clear the closing doors, please
     </p>
+    <div>
+        <div style="width:70%;height:0%;padding-bottom:50%;position:relative;"><iframe
+                src="https://giphy.com/embed/1Y6eCw6i8oDxzQENDM" width="70%" height="100%" style="position:absolute"
+                frameBorder="0" class="giphy-embed"></iframe></div>
+    </div>
     <div id="scrolly">
         <section class="text-holder">
             <embed src="audio/sounds3.mp3" type="audio/mp3" width="130px" height="100px" />
             <div class="scroll-step" data-size="75">
-                <p class="mt-5 fw-bolder">
+                <p class="mt-3 fw-bolder">
                     179th Street
                 </p>
-                <ul class="sights">
-                    <li>Major Mark Park</li>
-                    <li>Detective Keith L. Williams Park</li>
-                    <li>Cunningham Park</li>
-                </ul>
-                <p class="">
-                    <a href="https://www.nycgovparks.org/parks/major-mark-park">
-                        <img src="https://lh3.googleusercontent.com/p/AF1QipNJp6YDtg7g6wvlRmZz6AjoUwZ2F6Nck945vA3t=s1360-w1360-h1020"
-                            class="w-25 h-25 me-4" data-size="25" alt="" />
-                    </a>
-                    <a href="https://www.nycgovparks.org/parks/detective-keith-l-williams-park-liberty-park/">
-                        <img src="https://static.nycgovparks.org/images/photo_gallery/full_size/24287.jpg" class="w-25 h-25 me-4"
-                            data-size="50" alt="" />
-                    </a>
-                    <a href="https://www.nycgovparks.org/parks/cunningham-park">
-                        <img src="https://static.nycgovparks.org/images/photo_gallery/full_size/23030.jpg" class="w-25 h-25 me-4" alt=""
-                            data-size="75" />
-                    </a>
-                </p>  
+                <ul class="sights me-5 m-4">
+                    <a href="https://www.nycgovparks.org/parks/major-mark-park" target="_blank"><li>Major Mark Park</li></a>
+                    <img src="https://lh3.googleusercontent.com/p/AF1QipNJp6YDtg7g6wvlRmZz6AjoUwZ2F6Nck945vA3t=s1360-w1360-h1020" class="w-25 h-25 img-fluid img-thumbnail" alt="" />
+                    <a href="https://www.nycgovparks.org/parks/detective-keith-l-williams-park-liberty-park/" target="_blank"><li>Detective Keith L. Williams Park</li></a>
+                    <img src="https://static.nycgovparks.org/images/photo_gallery/full_size/24287.jpg" class="w-25 h-25 img-fluid img-thumbnail"
+                             alt="" />
+                    <a href="https://www.nycgovparks.org/parks/cunningham-park" target="_blank"><li>Cunningham Park</li></a>
+                    <img src="https://static.nycgovparks.org/images/photo_gallery/full_size/23030.jpg" class="w-50 h-50 img-fluid img-thumbnail" alt="" />
+                </ul>  
             </div>
             <embed src="audio/169th street.mp3" type="audio/mp3" width="130px" height="100px" />
             <div class="scroll-step">
                 <p class="mt-5 fw-bolder">
                     169th Street
                 </p>
-                <ul class="sights scroll-step">
+                <ul class="sights">
                     <li>Captain Tilly Park </li>
-                    <li>St. John's University</li>
+                    <a href="https://www.stjohns.edu/" target="_blank"><li>St. John's University</li></a>
                     <li>Joseph Austin Playground</li>
                 </ul>
-                <p class="scroll-step">
-                    <a href="https://www.nycgovparks.org/parks/captain-tilly-park" target="_blank">
+                <p>
+                    <a href="https://www.nycgovparks.org/parks/captain-tilly-park">
                         <img src="https://lh3.googleusercontent.com/p/AF1QipPcgN7BlnclVDxOpKhKkVV1xhP91mZh76EbJEYv=s1360-w1360-h1020"
                             class="w-25 h-25 me-4" alt="" data-size="100" />
                     </a>
-                    <a href="https://www.stjohns.edu/" target="_blank">
+                    
                         <img src="https://www.stjohns.edu/sites/default/files/2019-01/Queens%209_1600x900.jpg" class="w-25 h-25 me-4"
                             alt="" data-size="125" />
-                    </a>
+
                     <a href=" https://www.nycgovparks.org/parks/joseph-austin-playground">
                         <img src="https://static.nycgovparks.org/images/photo_gallery/full_size/23859.jpg" class="w-25 h-25 me-4" alt=""
                             data-size="150" />
