trying to get the svg image on the back - not working

--- a/expressive-web/index-edit.html
+++ b/expressive-web/index-edit.html
@@ -14,11 +14,16 @@
     <p class="intro">
         Stand clear the closing doors, please
     </p>
+    <!--Add a gif of doors closing-->
     <div>
         <div style="width:70%;height:0%;padding-bottom:50%;position:relative;"><iframe
                 src="https://giphy.com/embed/1Y6eCw6i8oDxzQENDM" width="70%" height="100%" style="position:absolute"
                 frameBorder="0" class="giphy-embed"></iframe></div>
     </div>
+    <div class="train-path">
+        <img src="images/train-path.svg" class="f-train-path" width="100%">
+    </div>
+    <!--Add all the stations, links and images-->
     <div id="scrolly">
         <section class="text-holder">
             <embed src="audio/sounds3.mp3" type="audio/mp3" width="130px" height="100px" />
@@ -270,8 +275,9 @@
             </div>
         </section>
     </div>
+    <!--Arrival announcement-->
     <p class="end">
-        You have arrive at your destination. Have a great day.
+        You have arrive at your destination. Thank you for riding MTA NYC Transit.
     </p>    
 </body>
 <script src="https://unpkg.com/intersection-observer@0.5.1/intersection-observer.js"></script>
