--- a/expressive-web/index-edit.html
+++ b/expressive-web/index-edit.html
@@ -20,14 +20,14 @@
                 src="https://giphy.com/embed/1Y6eCw6i8oDxzQENDM" width="70%" height="100%" style="position:absolute"
                 frameBorder="0" class="giphy-embed"></iframe></div>
     </div>
-    <div class="train-path">
+    <!-- <div class="train-path">
         <img src="images/train-path.svg" class="f-train-path" width="100%">
-    </div>
+    </div> -->
     <!--Add all the stations, links and images-->
     <div id="scrolly">
         <section class="text-holder">
-            <embed src="audio/sounds3.mp3" type="audio/mp3" width="130px" height="100px" />
-            <div class="scroll-step" data-size="75">
+            
+            <div class="scroll-step short-stop" data-size="75">
                 <p class="mt-3 fw-bolder">
                     179th Street
                 </p>
@@ -39,10 +39,13 @@
                              alt="" />
                     <a href="https://www.nycgovparks.org/parks/cunningham-park" target="_blank"><li>Cunningham Park</li></a>
                     <img src="https://static.nycgovparks.org/images/photo_gallery/full_size/23030.jpg" class="w-50 h-50 img-fluid img-thumbnail" alt="" />
-                </ul>  
+                </ul> 
+             <embed src="audio/169th street.mp3" type="audio/mp3" width="130px" height="100px" />    
+             <embed src="audio/sounds3.mp3" type="audio/mp3" width="130px" height="100px" />   
+            
             </div>
-            <embed src="audio/169th street.mp3" type="audio/mp3" width="130px" height="100px" />
-            <div class="scroll-step" data-size="75">
+            <embed src="audio/sounds.mp3" type="audio/mp3" width="130px" height="100px" />
+            <div class="scroll-step 169th short-stop" data-size="75">
                 <p class="mt-5 fw-bolder">
                     169th Street
                 </p>
@@ -54,9 +57,11 @@
                     <a href=" https://www.nycgovparks.org/parks/joseph-austin-playground" target="_blank"><li>Joseph Austin Playground</li></a>
                     <img src="https://static.nycgovparks.org/images/photo_gallery/full_size/23859.jpg" class="w-50 h-25 me-4 img-fluid img-thumbnail" alt="" />
                 </ul>
+            <embed src="audio/parsons.mp3" type="audio/mp3" width="130px" height="100px" /> 
+            <embed src="audio/sounds3.mp3" type="audio/mp3" width="130px" height="100px" />
             </div>
-            <embed src="audio/parsons.mp3" type="audio/mp3" width="130px" height="100px" />
-            <div class="scroll-step" data-size="75">
+            <embed src="audio/sounds.mp3" type="audio/mp3" width="130px" height="100px" />
+            <div class="scroll-step parsons short-stop" data-size="75">
                 <p class="mt-5 fw-bolder">
                 Parsons Blvd
                 </p>
@@ -69,9 +74,9 @@
                 </ul> 
             </div>
             <embed src="audio/sutphin.mp3" type="audio/mp3" width="130px" height="100px" />
-            <div class="scroll-step" data-size="75">
+            <div class="scroll-step sutphin med-stop" data-size="75">
                 <p class="mt-5 fw-bolder">
-                Suthphin Blvd
+                Sutphin Blvd
                 </p>
                 <ul class="sights me-5 m-4">
                     <a href="http://www.nycgovparks.org/parks/rufus-king-park" target="_blank"><li>Rufus King Park</li></a>
@@ -83,7 +88,7 @@
                 </ul> 
             </div>
             <embed src="audio/briarwood.mp3" type="audio/mp3" width="130px" height="100px" />
-            <div class="scroll-step" data-size="75">
+            <div class="scroll-step van-wyck" data-size="75">
                 <p class="mt-5 fw-bolder">
                 Briarwood-Van Wyck Blvd
                 </p>
@@ -97,7 +102,7 @@
                 </ul>
             </div>
             <embed src="audio/union.mp3" type="audio/mp3" width="130px" height="100px" />
-            <div class="scroll-step" data-size="75">
+            <div class="scroll-step union-tpke" data-size="75">
                 <p class="mt-5 fw-bolder">
                 Kew Gardens-Union Tpke
                 </p>
@@ -111,7 +116,7 @@
                 </ul>
             </div>
             <embed src="audio/75th.mp3" type="audio/mp3" width="130px" height="100px" />
-            <div class="scroll-step" data-size="75">
+            <div class="scroll-step 75th" data-size="75">
                 <p class="mt-5 fw-bolder">
                     75th Avenue
                 </p>
@@ -121,7 +126,7 @@
                 </ul>  
             </div>
             <embed src="audio/71st.mp3" type="audio/mp3" width="130px" height="100px" />
-            <div class="scroll-step" data-size="75">
+            <div class="scroll-step 71st" data-size="75">
                 <p class="mt-5 fw-bolder">
                 71st Ave-Forest Hills
                 </p>
@@ -138,7 +143,7 @@
                 </ul>
             </div>
             <embed src="audio/jheights.mp3" type="audio/mp3" width="130px" height="100px" />
-            <div class="scroll-step" data-size="75">
+            <div class="scroll-step jackson-heights" data-size="75">
                 <p class="mt-5 fw-bolder">
                     Jackson Heights-Roosevelt Ave
                 </p>
@@ -153,7 +158,7 @@
                 </ul>
             </div>
             <embed src="audio/21st.mp3" type="audio/mp3" width="130px" height="100px" />
-            <div class="scroll-step" data-size="75">
+            <div class="scroll-step 21st" data-size="75">
                 <p class="mt-5 fw-bolder">
                     21st Street-Queensbridge
                 </p>
@@ -170,7 +175,7 @@
                 </ul>
             </div>
             <embed src="audio/roosevelt.mp3" type="audio/mp3" width="130px" height="100px" />
-            <div class="scroll-step" data-size="75">
+            <div class="scroll-step r-island" data-size="75">
                 <p class="mt-5 fw-bolder">
                 Roosevelt Island
                 </p>
@@ -187,7 +192,7 @@
                 </ul>
             </div>
             <embed src="audio/63rd.mp3" type="audio/mp3" width="130px" height="100px" />
-            <div class="scroll-step" data-size="75">
+            <div class="scroll-step 63rd" data-size="75">
                 <p class="mt-5 fw-bolder">
                 Lexington Ave-63rd Street
                 </p>
@@ -204,7 +209,7 @@
                 </ul>
             </div>
             <embed src="audio/57th.mp3" type="audio/mp3" width="130px" height="100px" />
-            <div class="scroll-step" data-size="75">
+            <div class="scroll-step 57th" data-size="75">
                 <p class="mt-5 fw-bolder">
                 57th Street
                 </p>
@@ -221,7 +226,7 @@
                 </ul>
             </div>
             <embed src="audio/47-50th.mp3" type="audio/mp3" width="130px" height="100px" />
-            <div class="scroll-step" data-size="75">
+            <div class="scroll-step rockefeller" data-size="75">
                 <p class="mt-5 fw-bolder">
                     47-50th Street-Rockefeller Center
                 </p>
@@ -238,7 +243,7 @@
                 </ul>
             </div>
             <embed src="audio/42nd.mp3" type="audio/mp3" width="130px" height="100px" />
-            <div class="scroll-step" data-size="75">
+            <div class="scroll-step 42nd" data-size="75">
                 <p class="mt-5 fw-bolder">
                     42nd Street-Bryant Park
                 </p>
@@ -255,7 +260,7 @@
                 </ul>
             </div>
             <embed src="audio/34th.mp3" type="audio/mp3" width="130px" height="100px" />
-            <div class="scroll-step" data-size="75">
+            <div class="scroll-step 34th" data-size="75">
                 <p class="mt-5 fw-bolder">
                     34th Street-Herald Square
                 </p>
