editing the home page

--- a/expressive-web/home.html
+++ b/expressive-web/home.html
@@ -7,19 +7,17 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="home-edit.css">
 </head>
 
-<body class="text-center p-5">
-    <h1 class="text-danger fst-italic">A deeper look at your commute</h1>
-    <p>What kind of commuter are you? Are you the type to disappear into your thoughts, imagining you were a world away from your current location? Are you drowning out the noise via music and podcasts? Are you hoping to be invisible, avoiding any eye-contact with others as you hope for an uneventful journey? Are you constantly stressed, just waiting for the MTA to ruin your day with the inevitable "train traffic ahead"?</p>
-    <p>But what if you stopped to really think about your commute? Amid the drudgery of trekking to and fro, do you ever stop and wonder what you might be missing along the way.</p>
-    <a href="index.html">Think about your commute differently, think about the possibilities that you are missing out on.</a>
-
-    <main>
-
-    </main>
-
+<body class="text-center body-intro">
+    <div class="image-container">
+        <img src="images/F-train.jpg" class="train-pic" alt="">
+    </div>
+    <h1 class="text-danger fst-italic statement">A deeper look at your commute</h1>
+    <p class="open-text">What kind of commuter are you? Are you the type to disappear into your thoughts, imagining you were a world away from your current location? Are you drowning out the noise via music and podcasts? Are you hoping to be invisible, avoiding any eye-contact with others as you hope for an uneventful journey? Are you constantly stressed, just waiting for the MTA to ruin your day with the inevitable "train traffic ahead"?</p>
+    <p class="open-text">But what if you stopped to really think about your commute? Amid the drudgery of trekking to and fro, do you ever stop and wonder what you might be missing along the way.</p>
+    <a href="index.html" class="start-link">Think about your commute differently, think about the possibilities that you are missing out on.</a>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/p5@1.4.2/lib/p5.js"></script>
 </html>
