--- a/expressive-web/index-edit.html
+++ b/expressive-web/index-edit.html
@@ -15,11 +15,11 @@
         Stand clear the closing doors, please
     </p>
     <!--Add a gif of doors closing-->
-    <div>
+    <!-- <div class="giphy">
         <div style="width:70%;height:0%;padding-bottom:50%;position:relative;"><iframe
                 src="https://giphy.com/embed/1Y6eCw6i8oDxzQENDM" width="70%" height="100%" style="position:absolute"
                 frameBorder="0" class="giphy-embed"></iframe></div>
-    </div>
+    </div> -->
     <!-- <div class="train-path">
         <img src="images/train-path.svg" class="f-train-path" width="100%">
     </div> -->
