added better background image of tracks
now need to position the train on the tracks

--- a/expressive-web/index-edit.html
+++ b/expressive-web/index-edit.html
@@ -12,7 +12,7 @@
     <a href="home.html" class="home-link">Home</a>
     <!--Create the starting statement-->
     <p class="intro">
-        Stand clear the closing doors, please
+        Stand clear the closing doors, please!
     </p>
     <!--Add a gif of doors closing-->
     <!-- <div class="giphy">
