--- a/expressive-web/home.html
+++ b/expressive-web/home.html
@@ -12,12 +12,14 @@
 
 <body class="text-center body-intro">
     <div class="image-container">
-        <img src="images/F-train.jpg" class="train-pic" alt="">
+            <img src="images/F-train.jpg" class="train-pic" alt="">
+        </div>
+    <div class="overlay-text">
+        <h1 class="text-danger fst-italic statement">A deeper look at your commute</h1>
+        <p class="open-text">What kind of commuter are you? Are you the type to disappear into your thoughts, imagining you were a world away from your current location? Are you drowning out the noise via music and podcasts? Are you hoping to be invisible, avoiding any eye-contact with others in hopes of an uneventful journey? Are you constantly stressed, just waiting for the MTA to ruin your day with the inevitable "train traffic ahead"?</p>
+        <p class="open-text">But what if you stopped to really think about your commute? Amid the drudgery of trekking to and fro, do you ever wonder what you might be missing along the way.</p>
+        <a href="index-edit.html" class="start-link">Click here to see the different sights along the commute on our way to class</a>
     </div>
-    <h1 class="text-danger fst-italic statement">A deeper look at your commute</h1>
-    <p class="open-text">What kind of commuter are you? Are you the type to disappear into your thoughts, imagining you were a world away from your current location? Are you drowning out the noise via music and podcasts? Are you hoping to be invisible, avoiding any eye-contact with others as you hope for an uneventful journey? Are you constantly stressed, just waiting for the MTA to ruin your day with the inevitable "train traffic ahead"?</p>
-    <p class="open-text">But what if you stopped to really think about your commute? Amid the drudgery of trekking to and fro, do you ever stop and wonder what you might be missing along the way.</p>
-    <a href="index-edit.html" class="start-link">Think about your commute differently, think about the possibilities that you are missing out on.</a>
 </body>
 <script src="script-edit.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/p5@1.4.2/lib/p5.js"></script>
