added classes to style the stations

--- a/expressive-web/index-edit.html
+++ b/expressive-web/index-edit.html
@@ -26,7 +26,7 @@
     <!--Add all the stations, links and images-->
     <div id="scrolly">
         <section class="text-holder"> 
-            <div class="scroll-step short-stop mt-5" data-size="75">
+            <div class="scroll-step short-stop first mt-5" data-size="75">
                 <p class="mt-3 fw-bolder">
                     179th Street
                 </p>
@@ -45,7 +45,7 @@
                 </div> 
             </div>
             <embed src="audio/sounds.mp3" type="audio/mp3" width="130px" height="100px" />
-            <div class="scroll-step short-stop" data-size="75">
+            <div class="scroll-step short-stop second" data-size="75">
                 <p class="mt-5 fw-bolder">
                     169th Street
                 </p>
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <embed src="audio/sounds.mp3" type="audio/mp3" width="130px" height="100px" />
-            <div class="scroll-step short-stop" data-size="75">
+            <div class="scroll-step short-stop third" data-size="75">
                 <p class="mt-5 fw-bolder">
                 Parsons Blvd
                 </p>
@@ -80,7 +80,7 @@
                 </div>
             </div>
             <embed src="audio/sounds.mp3" type="audio/mp3" width="130px" height="100px" />
-            <div class="scroll-step med-stop" data-size="75">
+            <div class="scroll-step med-stop fourth" data-size="75">
                 <p class="mt-5 fw-bolder">
                 Sutphin Blvd
                 </p>
@@ -98,7 +98,7 @@
                 </div>
             </div>
             <embed src="audio/sounds.mp3" type="audio/mp3" width="130px" height="100px" />
-            <div class="scroll-step short-stop" data-size="75">
+            <div class="scroll-step short-stop fifth" data-size="75">
                 <p class="mt-5 fw-bolder">
                 Briarwood-Van Wyck Blvd
                 </p>
@@ -116,7 +116,7 @@
                 </div>
             </div>
             <embed src="audio/sounds.mp3" type="audio/mp3" width="130px" height="100px" />
-            <div class="scroll-step short-stop" data-size="75">
+            <div class="scroll-step short-stop sixth" data-size="75">
                 <p class="mt-5 fw-bolder">
                 Kew Gardens-Union Tpke
                 </p>
@@ -134,7 +134,7 @@
                 </div>
             </div>
             <embed src="audio/sounds.mp3" type="audio/mp3" width="130px" height="100px" />
-            <div class="scroll-step short-stop" data-size="75">
+            <div class="scroll-step short-stop seventh" data-size="75">
                 <p class="mt-5 fw-bolder">
                     75th Avenue
                 </p>
@@ -148,7 +148,7 @@
                 </div>
             </div>
             <embed src="audio/sounds.mp3" type="audio/mp3" width="130px" height="100px" />
-            <div class="scroll-step long-stop" data-size="75">
+            <div class="scroll-step long-stop eighth" data-size="75">
                 <p class="mt-5 fw-bolder">
                 71st Ave-Forest Hills
                 </p>
@@ -169,7 +169,7 @@
                 </div> 
             </div>
             <embed src="audio/sounds.mp3" type="audio/mp3" width="130px" height="100px" />
-            <div class="scroll-step longest-stop" data-size="75">
+            <div class="scroll-step longest-stop ninth" data-size="75">
                 <p class="mt-5 fw-bolder">
                     Jackson Heights-Roosevelt Ave
                 </p>
@@ -188,7 +188,7 @@
                 </div>
             </div>
             <embed src="audio/sounds.mp3" type="audio/mp3" width="130px" height="100px" />
-            <div class="scroll-step med-stop" data-size="75">
+            <div class="scroll-step med-stop tenth" data-size="75">
                 <p class="mt-5 fw-bolder">
                     21st Street-Queensbridge
                 </p>
@@ -209,7 +209,7 @@
                 </div> 
             </div>
             <embed src="audio/sounds.mp3" type="audio/mp3" width="130px" height="100px" />
-            <div class="scroll-step med-stop" data-size="75">
+            <div class="scroll-step med-stop eleventh" data-size="75">
                 <p class="mt-5 fw-bolder">
                 Roosevelt Island
                 </p>
@@ -230,7 +230,7 @@
                 </div>
             </div>
             <embed src="audio/sounds.mp3" type="audio/mp3" width="130px" height="100px" />
-            <div class="scroll-step med-stop" data-size="75">
+            <div class="scroll-step med-stop twelfth" data-size="75">
                 <p class="mt-5 fw-bolder">
                 Lexington Ave-63rd Street
                 </p>
@@ -251,7 +251,7 @@
                 </div>
             </div>
             <embed src="audio/sounds.mp3" type="audio/mp3" width="130px" height="100px" />
-            <div class="scroll-step short-stop" data-size="75">
+            <div class="scroll-step short-stop thirteenth" data-size="75">
                 <p class="mt-5 fw-bolder">
                 57th Street
                 </p>
@@ -273,7 +273,7 @@
             </div>
             <embed src="audio/sounds.mp3" type="audio/mp3" width="130px" height="100px" />
             <div class="scroll-step short-stop" data-size="75">
-                <p class="mt-5 fw-bolder">
+                <p class="mt-5 fw-bolder fourteenth">
                     47-50th Street-Rockefeller Center
                 </p>
                 <ul class="sights me-5 m-4">
@@ -293,7 +293,7 @@
                 </div>
             </div>
             <embed src="audio/sounds.mp3" type="audio/mp3" width="130px" height="100px" />
-            <div class="scroll-step short-stop" data-size="75">
+            <div class="scroll-step short-stop fifteenth" data-size="75">
                 <p class="mt-5 fw-bolder">
                     42nd Street-Bryant Park
                 </p>
@@ -314,7 +314,7 @@
                 </div>
             </div>
             <embed src="audio/sounds.mp3" type="audio/mp3" width="130px" height="100px" />
-            <div class="scroll-step" data-size="75">
+            <div class="scroll-step sixteenth" data-size="75">
                 <p class="mt-5 fw-bolder">
                     34th Street-Herald Square
                 </p>
