still styling stations

--- a/expressive-web/index-edit.html
+++ b/expressive-web/index-edit.html
@@ -272,8 +272,8 @@
                 </div>
             </div>
             <embed src="audio/sounds.mp3" type="audio/mp3" width="130px" height="100px" />
-            <div class="scroll-step short-stop" data-size="75">
-                <p class="mt-5 fw-bolder fourteenth">
+            <div class="scroll-step short-stop fourteenth" data-size="75">
+                <p class="mt-5 fw-bolder">
                     47-50th Street-Rockefeller Center
                 </p>
                 <ul class="sights me-5 m-4">
