finished styling the stations

--- a/expressive-web/index-edit.html
+++ b/expressive-web/index-edit.html
@@ -336,7 +336,7 @@
     </div>
     <!--Arrival announcement-->
     <p class="end">
-        You have arrive at your destination. Thank you for riding MTA NYC Transit.
+        You have arrived at your destination. Thank you for riding with MTA NYC Transit.
     </p>    
 </body>
 <script src="https://unpkg.com/intersection-observer@0.5.1/intersection-observer.js"></script>
