organized css code

--- a/expressive-web/index-edit.html
+++ b/expressive-web/index-edit.html
@@ -11,9 +11,9 @@
 <body>
     <a href="home.html" class="home-link">Home</a>
     <!--Create the starting statement-->
-    <p class="intro">
+    <h3 class="intro">
         Stand clear the closing doors, please!
-    </p>
+    </h3>
     <!--Add a gif of doors closing-->
     <!-- <div class="giphy">
         <div style="width:70%;height:0%;padding-bottom:50%;position:relative;"><iframe
