scroll text works with css not JS - but also moved starting audio

--- a/expressive-web/index-edit.html
+++ b/expressive-web/index-edit.html
@@ -10,9 +10,11 @@
 </head>
 <body>
     <a href="home.html" class="home-link">Home</a>
+    <br />
+    <embed src="audio/169th street.mp3" type="audio/mp3" width="130px" height="100px" class="mt-5" />
     <!--Create the starting statement-->
-    <h3 class="intro">
-        Stand clear the closing doors, please!
+    <h3 class="intro scrolling-text mt-4">
+        Click here to start
     </h3>
     <!--Add a gif of doors closing-->
     <!-- <div class="giphy">
@@ -40,7 +42,7 @@
                     <img src="https://static.nycgovparks.org/images/photo_gallery/full_size/23030.jpg" class="w-50 h-50 img-fluid img-thumbnail" alt="" />
                 </ul>
                 <div class="audio">
-                   <embed src="audio/169th street.mp3" type="audio/mp3" width="130px" height="100px" />    
+                       
                     <embed src="audio/sounds3.mp3" type="audio/mp3" width="130px" height="100px" /> 
                 </div> 
             </div>
