maybe got the train pic to center

--- a/expressive-web/index-edit.html
+++ b/expressive-web/index-edit.html
@@ -337,9 +337,9 @@
         </section>
     </div>
     <!--Arrival announcement-->
-    <p class="end">
-        You have arrived at your destination. Thank you for riding with MTA NYC Transit.
-    </p>    
+    <h3 class="end">
+        Please watch your step when exiting the train. Thank you for riding with MTA NYC Transit.
+    </h3>    
 </body>
 <script src="https://unpkg.com/intersection-observer@0.5.1/intersection-observer.js"></script>
 <script src="https://unpkg.com/scrollama"></script>
