found code that would help me move the train image
https://chat.openai.com/c/b1325e01-ba50-4316-b0e5-e1de3c705606

<style>
        #movingImage {
            position: absolute;
        }
    </style>
</head>
<body>
    <img id="movingImage" src="images/179th street.jpg" alt="Moving Image">

    <script>
        // Get the image element
            var image = document.getElementById('movingImage');

            // Set initial position
            var initialX = 0;
            var initialY = 0;

            // Set the interval for animation
            var interval = setInterval(moveImage, 7);

            function moveImage() {
                // Update position
                initialX += 6; // Change this value to control horizontal movement
                initialY += 2; // Change this value to control vertical movement

                // Apply new position
                image.style.left = initialX + 'px';
                image.style.top = initialY + 'px';

                //Optional: Stop the animation after a certain condition (e.g., reached a specific position)
                if (initialX >= 400) {
                  clearInterval(interval);
                }
            }
    </script>

--- a/expressive-web/index-edit.html
+++ b/expressive-web/index-edit.html
@@ -11,6 +11,7 @@
 <body>
     <a href="home.html" class="home-link">Home</a>
     <br />
+    <button>Pause trip</button>
     <div>
         <embed src="audio/169th street.mp3" type="audio/mp3" width="130px" height="100px" class="mt-5" />
         <!--Audio element would not work just wouldn't show up on the DOM, even tried testing on a blank index.html-->
@@ -348,5 +349,6 @@
 </body>
 <script src="https://unpkg.com/intersection-observer@0.5.1/intersection-observer.js"></script>
 <script src="https://unpkg.com/scrollama"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="script-edit.js"></script>
 </html>
