--- a/expressive-web/home.html
+++ b/expressive-web/home.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="home-edit.css">
+    <link rel="stylesheet" href="home.css">
 </head>
 
 <body class="text-center body-intro">
@@ -16,9 +16,9 @@
         </div>
     <div class="overlay-text">
         <h1 class="text-danger fst-italic statement">A deeper look at your commute</h1>
-        <p class="open-text">What kind of commuter are you? Are you the type to disappear into your thoughts, imagining you were a world away from your current location? Are you drowning out the noise via music and podcasts? Are you hoping to be invisible, avoiding any eye-contact with others in hopes of an uneventful journey? Are you constantly stressed, just waiting for the MTA to ruin your day with the inevitable "train traffic ahead"?</p>
+        <p class="open-text">What kind of commuter are you? Are you asleep, lost in your own thoughts, drowning out the noise with music, trying to remain invisible to others, or stressed about never-ending delays? </p>
         <p class="open-text">But what if you stopped to really think about your commute? Amid the drudgery of trekking to and fro, do you ever wonder what you might be missing along the way.</p>
-        <a href="index-edit.html" class="start-link">Click here to see the different sights along the commute on our way to class</a>
+        <a href="index.html" class="start-link">Click here to see the different sights along the commute on our way to class</a>
     </div>
 </body>
 <script src="script-edit.js"></script>
