moved train to center track hopefully

--- a/expressive-web/index.html
+++ b/expressive-web/index.html
@@ -28,9 +28,6 @@
                 src="https://giphy.com/embed/1Y6eCw6i8oDxzQENDM" width="70%" height="100%" style="position:absolute"
                 frameBorder="0" class="giphy-embed"></iframe></div>
     </div> -->
-    <!-- <div class="train-path">
-        <img src="images/train-path.svg" class="f-train-path" width="100%">
-    </div> -->
     <!--Add all the stations, links and images-->
     <div id="scrolly">
         <section class="text-holder"> 
@@ -336,9 +333,9 @@
                 </ul>
             </div>
         </section>
-        <section class="graphic">
-            <div>
-                <img src="images/f-train-no-background.png" class="ball" alt="">
+        <section id="movingImage" class="graphic">
+            <div class="move-image">
+                <img  src="images/f-train-no-background.png" class="ball" alt="">
             </div>
         </section>
     </div>
